--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -26,15 +26,21 @@ cc_library(
         "includes/cpp_redis/builders/reply_builder.hpp",
         "includes/cpp_redis/builders/simple_string_builder.hpp",
         "includes/cpp_redis/core/client.hpp",
+        "includes/cpp_redis/core/consumer.hpp",
         "includes/cpp_redis/core/reply.hpp",
         "includes/cpp_redis/core/sentinel.hpp",
         "includes/cpp_redis/core/subscriber.hpp",
         "includes/cpp_redis/cpp_redis",
+        "includes/cpp_redis/helpers/generate_rand.hpp",
         "includes/cpp_redis/helpers/variadic_template.hpp",
         "includes/cpp_redis/impl/client.ipp",
+        "includes/cpp_redis/impl/types.hpp",
+        "includes/cpp_redis/misc/convert.hpp",
+        "includes/cpp_redis/misc/dispatch_queue.hpp",
         "includes/cpp_redis/misc/error.hpp",
         "includes/cpp_redis/misc/logger.hpp",
         "includes/cpp_redis/misc/macro.hpp",
+        "includes/cpp_redis/misc/optional.hpp",
         "includes/cpp_redis/network/redis_connection.hpp",
         "includes/cpp_redis/network/tcp_client.hpp",
         "includes/cpp_redis/network/tcp_client_iface.hpp",
