add sources to BUILD.bazel

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -9,9 +9,12 @@ cc_library(
         "sources/builders/reply_builder.cpp",
         "sources/builders/simple_string_builder.cpp",
         "sources/core/client.cpp",
+        "sources/core/consumer.cpp",
         "sources/core/reply.cpp",
         "sources/core/sentinel.cpp",
         "sources/core/subscriber.cpp",
+        "sources/core/types.cpp",
+        "sources/misc/dispatch_queue.cpp",
         "sources/misc/logger.cpp",
         "sources/network/redis_connection.cpp",
         "sources/network/tcp_client.cpp",
@@ -30,6 +33,7 @@ cc_library(
         "includes/cpp_redis/core/reply.hpp",
         "includes/cpp_redis/core/sentinel.hpp",
         "includes/cpp_redis/core/subscriber.hpp",
+        "includes/cpp_redis/core/types.hpp",
         "includes/cpp_redis/cpp_redis",
         "includes/cpp_redis/helpers/generate_rand.hpp",
         "includes/cpp_redis/helpers/variadic_template.hpp",
