--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,31 +42,31 @@ set(CMAKE_CXX_STANDARD 11)
 # compilation options
 ###
 if (MSVC)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3 /O2 /bigobj")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3 /O2 /bigobj")
 
-	# was causing conflics with gtest build
-	string(REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
+  # was causing conflics with gtest build
+  string(REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
 
-	if ("${MSVC_RUNTIME_LIBRARY_CONFIG}" STREQUAL "")
-		set(MSVC_RUNTIME_LIBRARY_CONFIG "/MT")
-	endif ()
+  if ("${MSVC_RUNTIME_LIBRARY_CONFIG}" STREQUAL "")
+    set(MSVC_RUNTIME_LIBRARY_CONFIG "/MT")
+  endif ()
 
-	foreach (flag_var CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE)
-		if ("${MSVC_RUNTIME_LIBRARY_CONFIG}" STREQUAL "/MT")
-			string(REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
-		elseif ("${MSVC_RUNTIME_LIBRARY_CONFIG}" STREQUAL "/MD")
-			string(REPLACE "/MT" "/MD" ${flag_var} "${${flag_var}}")
-		else ()
-			string(REPLACE "/MD" "${MSVC_RUNTIME_LIBRARY_CONFIG}" ${flag_var} "${${flag_var}}")
-			string(REPLACE "/MT" "${MSVC_RUNTIME_LIBRARY_CONFIG}" ${flag_var} "${${flag_var}}")
-		endif ()
-	endforeach ()
+  foreach (flag_var CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE)
+    if ("${MSVC_RUNTIME_LIBRARY_CONFIG}" STREQUAL "/MT")
+      string(REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
+    elseif ("${MSVC_RUNTIME_LIBRARY_CONFIG}" STREQUAL "/MD")
+      string(REPLACE "/MT" "/MD" ${flag_var} "${${flag_var}}")
+    else ()
+      string(REPLACE "/MD" "${MSVC_RUNTIME_LIBRARY_CONFIG}" ${flag_var} "${${flag_var}}")
+      string(REPLACE "/MT" "${MSVC_RUNTIME_LIBRARY_CONFIG}" ${flag_var} "${${flag_var}}")
+    endif ()
+  endforeach ()
 
-	add_definitions(-D_UNICODE)
-	add_definitions(-DUNICODE)
-	add_definitions(-DWIN32_LEAN_AND_MEAN)
+  add_definitions(-D_UNICODE)
+  add_definitions(-DUNICODE)
+  add_definitions(-DWIN32_LEAN_AND_MEAN)
 else ()
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra -O3")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra -O3")
 endif ()
 
 
@@ -79,7 +79,7 @@ set(CPP_REDIS_INCLUDES ${PROJECT_SOURCE_DIR}/includes)
 set(DEPS_INCLUDES ${PROJECT_SOURCE_DIR}/deps/include)
 
 if (NOT USE_CUSTOM_TCP_CLIENT)
-	set(DEPS_INCLUDES ${DEPS_INCLUDES} ${TACOPIE_INCLUDE_DIR})
+  set(DEPS_INCLUDES ${DEPS_INCLUDES} ${TACOPIE_INCLUDE_DIR})
 endif ()
 
 set(DEPS_LIBRARIES ${PROJECT_SOURCE_DIR}/deps/lib)
@@ -95,30 +95,30 @@ include_directories(${CPP_REDIS_INCLUDES} ${DEPS_INCLUDES})
 # sources
 ###
 set(SRC_DIRS "sources"
-	"sources/builders"
-	"sources/core"
-	"sources/misc"
-	"sources/network"
-	"includes/cpp_redis"
-	"includes/cpp_redis/builders"
-	"includes/cpp_redis/core"
-	"includes/cpp_redis/misc"
-	"includes/cpp_redis/network")
+  "sources/builders"
+  "sources/core"
+  "sources/misc"
+  "sources/network"
+  "includes/cpp_redis"
+  "includes/cpp_redis/builders"
+  "includes/cpp_redis/core"
+  "includes/cpp_redis/misc"
+  "includes/cpp_redis/network")
 
 foreach (dir ${SRC_DIRS})
-	# get directory sources and headers
-	file(GLOB s_${dir} "${dir}/*.cpp")
-	file(GLOB h_${dir} "${dir}/*.hpp")
-	file(GLOB i_${dir} "${dir}/*.ipp")
+  # get directory sources and headers
+  file(GLOB s_${dir} "${dir}/*.cpp")
+  file(GLOB h_${dir} "${dir}/*.hpp")
+  file(GLOB i_${dir} "${dir}/*.ipp")
 
-	# set sources
-	set(SOURCES ${SOURCES} ${s_${dir}} ${h_${dir}} ${i_${dir}})
+  # set sources
+  set(SOURCES ${SOURCES} ${s_${dir}} ${h_${dir}} ${i_${dir}})
 endforeach ()
 # filter tcp_client if no tacopie
 if (USE_CUSTOM_TCP_CLIENT)
-	file(GLOB tacopie_cpp "sources/network/tcp_client.cpp")
-	file(GLOB tacopie_h "includes/cpp_redis/network/tcp_client.hpp")
-	list(REMOVE_ITEM SOURCES ${tacopie_cpp} ${tacopie_h})
+  file(GLOB tacopie_cpp "sources/network/tcp_client.cpp")
+  file(GLOB tacopie_h "includes/cpp_redis/network/tcp_client.hpp")
+  list(REMOVE_ITEM SOURCES ${tacopie_cpp} ${tacopie_h})
 endif (USE_CUSTOM_TCP_CLIENT)
 
 
@@ -142,37 +142,37 @@ add_library(${PROJECT_NAME} STATIC ${SOURCES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 if (WIN32)
-	set_target_properties(${PROJECT_NAME}
-						  PROPERTIES COMPILE_PDB_NAME ${PROJECT_NAME}
-						  COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+  set_target_properties(${PROJECT_NAME} PROPERTIES
+    COMPILE_PDB_NAME ${PROJECT_NAME}
+    COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 endif (WIN32)
 
 if (WIN32)
-	target_link_libraries(${PROJECT_NAME} ws2_32)
+  target_link_libraries(${PROJECT_NAME} ws2_32)
 else ()
-	target_link_libraries(${PROJECT_NAME} pthread)
+  target_link_libraries(${PROJECT_NAME} pthread)
 endif (WIN32)
 
 if (TACOPIE_LIBRARY)
-	target_link_libraries(${PROJECT_NAME} ${TACOPIE_LIBRARY})
+  target_link_libraries(${PROJECT_NAME} ${TACOPIE_LIBRARY})
 else ()
-	target_link_libraries(${PROJECT_NAME} tacopie)
+  target_link_libraries(${PROJECT_NAME} tacopie)
 endif (TACOPIE_LIBRARY)
 
 
 # __CPP_REDIS_READ_SIZE
 if (READ_SIZE)
-	set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_DEFINITIONS " __CPP_REDIS_READ_SIZE=${READ_SIZE}")
+  set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_DEFINITIONS " __CPP_REDIS_READ_SIZE=${READ_SIZE}")
 endif (READ_SIZE)
 
 # __CPP_REDIS_LOGGING_ENABLED
 if (LOGGING_ENABLED)
-	set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_DEFINITIONS " __CPP_REDIS_LOGGING_ENABLED=${LOGGING_ENABLED}")
+  set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_DEFINITIONS " __CPP_REDIS_LOGGING_ENABLED=${LOGGING_ENABLED}")
 endif (LOGGING_ENABLED)
 
 # __CPP_REDIS_USE_CUSTOM_TCP_CLIENT
 if (USE_CUSTOM_TCP_CLIENT)
-	set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_DEFINITIONS " __CPP_REDIS_USE_CUSTOM_TCP_CLIENT=${USE_CUSTOM_TCP_CLIENT}")
+  set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_DEFINITIONS " __CPP_REDIS_USE_CUSTOM_TCP_CLIENT=${USE_CUSTOM_TCP_CLIENT}")
 endif (USE_CUSTOM_TCP_CLIENT)
 
 
@@ -192,23 +192,23 @@ install(DIRECTORY ${CPP_REDIS_INCLUDES}/ DESTINATION include USE_SOURCE_PERMISSI
 # examples
 ###
 if (BUILD_EXAMPLES)
-	add_subdirectory(examples)
-	# Reset variable to false to ensure tacopie does no build examples
-	set(BUILD_EXAMPLES false)
+  add_subdirectory(examples)
+  # Reset variable to false to ensure tacopie does no build examples
+  set(BUILD_EXAMPLES false)
 endif (BUILD_EXAMPLES)
 
 ###
 # tests
 ###
 if (BUILD_TESTS)
-	enable_testing()
-	add_subdirectory(tests)
-	include(ExternalProject)
-	ExternalProject_Add("googletest"
-						GIT_REPOSITORY "https://github.com/google/googletest.git"
-						CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/deps")
-	# Reset variable to false to ensure tacopie does no build tests
-	set(BUILD_TESTS false)
+  enable_testing()
+  add_subdirectory(tests)
+  include(ExternalProject)
+  ExternalProject_Add("googletest"
+    GIT_REPOSITORY "https://github.com/google/googletest.git"
+    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/deps")
+  # Reset variable to false to ensure tacopie does no build tests
+  set(BUILD_TESTS false)
 endif (BUILD_TESTS)
 
 
@@ -216,6 +216,6 @@ endif (BUILD_TESTS)
 # tacopie
 ###
 if (NOT TACOPIE_LIBRARY AND NOT USE_CUSTOM_TCP_CLIENT)
-	set(SOURCES)  # reset the SOURCES var so that the tacopie project won't include the cpp_redis sources too
-	add_subdirectory(tacopie)
+  set(SOURCES)  # reset the SOURCES var so that the tacopie project won't include the cpp_redis sources too
+  add_subdirectory(tacopie)
 endif (NOT TACOPIE_LIBRARY AND NOT USE_CUSTOM_TCP_CLIENT)
