cmake: use googletest 1.10.0 from a submodule
A common use case is to integrate libraries as git submodules and a
single project might have multiple modules each with test dependencies
to gtest. Usually the top level project configures gtest, propagating
the target to it's submodules. This is preferable to the case where
each submodule uses ExternalProject to build & install gtest in a
custom location with possibly arbitrary target names (googletest,
gtest, <foobar>_gtest, etc.) as this can easily lead to multiple gtest
builds.

As a solution check if gtest (which is defined by googletest's build
files) is an existing target to determine if project's own googletest
submodule should be added to the build. Either way the subsequent
add_subdirectory() tests will have a target "gtest" to link
against. Various INTERFACE flags will take care of the rest.

A further improvement is to add "${PROJECT_NAME}::" as a prefix to the
tests. This helps when cpp_redis is a part of a larger project
and (for any reason) developers want to run cpp_redis' tests only
using "ctest -R cpp_redis".

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,48 +21,29 @@
 # SOFTWARE.
 
 ###
-# project
-###
-set(PROJECT cpp_redis_tests)
-project(${PROJECT} CXX)
-
-
-###
-# compilation options
-###
-if(NOT WIN32)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-endif(NOT WIN32)
-
-
-###
-# includes
-###
-include_directories(${DEPS_INCLUDES} ${CPP_REDIS_INCLUDES})
-
-
-###
-# libraries
-###
-link_directories(${DEPS_LIBRARIES})
-
-
-###
 # executables
 ###
-set(MAIN "sources/main.cpp")
-set(DIRS "sources/spec" "sources/spec/**")
-foreach(DIR ${DIRS})
-  file(GLOB s_${DIR} "${DIR}/*.cpp")
-  foreach(SOURCE ${s_${DIR}})
-    get_filename_component(TEST_NAME ${SOURCE} NAME_WE)
-    add_executable(${TEST_NAME} ${MAIN} ${SOURCE})
-    target_link_libraries(${TEST_NAME} cpp_redis gtest)
-    if(WIN32)
-      target_link_libraries(${TEST_NAME} ws2_32)
-    else()
-      target_link_libraries(${TEST_NAME} pthread)
-    endif(WIN32)
-    add_test(NAME ${TEST_NAME}_tests COMMAND ${TEST_NAME})
-  endforeach()
+set(main "sources/main.cpp")
+
+macro(add_spec_test source)
+  get_filename_component(test_name ${source} NAME_WE)
+  add_executable(${test_name} ${main} ${source})
+  target_link_libraries(${test_name} PRIVATE ${PROJECT_NAME} gtest Threads::Threads)
+  add_test(NAME ${PROJECT_NAME}::${test_name}_tests COMMAND ${test_name})
+endmacro()
+
+set(tests
+  sources/spec/builders/array_builder_spec.cpp
+  sources/spec/builders/integer_builder_spec.cpp
+  sources/spec/builders/builders_factory_spec.cpp
+  sources/spec/builders/reply_builder_spec.cpp
+  sources/spec/builders/bulk_string_builder_spec.cpp
+  sources/spec/builders/simple_string_builder_spec.cpp
+  sources/spec/builders/error_builder_spec.cpp
+  sources/spec/redis_client_spec.cpp
+  sources/spec/redis_subscriber_spec.cpp
+  sources/spec/reply_spec.cpp)
+
+foreach(test ${tests})
+  add_spec_test(${test})
 endforeach()
