--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tacopie"]
-	path = tacopie
-	url = https://github.com/Cylix/tacopie.git
+    path = tacopie
+    url = https://github.com/lindblandro/tacopie.git
+[submodule "googletest"]
+	path = googletest
+	url = https://github.com/google/googletest.git
