cmake: remove deprecated features
Using tacopie from system libdir might be good feature to have, but
the current implementation is buggy. Add it properly later using
pkgconfig or CMake imports.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,10 +81,8 @@ else ()
 endif ()
 
 ###
-# variables
+# tacopie
 ###
-find_path(tacopie_include_dir tacopie/tacopie PATHS ${PROJECT_SOURCE_DIR}/tacopie/includes/)
-find_library(tacopie_library tacopie)
 if (NOT tacopie_library AND NOT USE_CUSTOM_TCP_CLIENT)
   # requires CMP0077 set to NEW
   set(BUILD_EXAMPLES OFF)
@@ -95,10 +93,6 @@ endif ()
 
 set(cpp_redis_includes ${CMAKE_CURRENT_LIST_DIR}/includes)
 set(deps_includes ${CMAKE_CURRENT_LIST_DIR}/deps/include)
-
-if (NOT USE_CUSTOM_TCP_CLIENT)
-  list(APPEND deps_includes ${tacopie_include_dir})
-endif ()
 
 set(deps_libraries ${PROJECT_SOURCE_DIR}/deps/lib)
 
@@ -153,7 +147,7 @@ else ()
 endif ()
 
 ###
-# parameters. see
+# parameters
 ###
 set(READ_SIZE "4096" CACHE STRING "Number of bytes read from sockets")
 if (READ_SIZE MATCHES "^[1-9]+")
