--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,6 +173,9 @@ include(GNUInstallDirs)
 install(TARGETS ${PROJECT_NAME} EXPORT ${EXPORT_TARGET_NAME}
   LIBRARY
   RESOURCE DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+install(EXPORT ${EXPORT_TARGET_NAME} DESTINATION lib/${PROJECT_NAME} EXPORT_LINK_INTERFACE_LIBRARIES)
+
+
 ###
 # examples
 ###
