--- a/.travis.yml
+++ b/.travis.yml
@@ -33,15 +33,12 @@ install:
   - CMAKE_VERSION_MINOR="15"
   - CMAKE_VERSION_PATCH="3"
   - CMAKE_VERSION="${CMAKE_VERSION_MAJOR}.${CMAKE_VERSION_MINOR}.${CMAKE_VERSION_PATCH}"
-  - MD5SUM="openssl md5"
   - MD5HASH="aee19b081eb4f19d4f85d6aa5c069e01"
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then CMAKE_PLATFORM="Darwin"; fi
   - CMAKE_FILE="cmake-${CMAKE_VERSION}-${CMAKE_PLATFORM}-x86_64"
   - CMAKE_DIR="v${CMAKE_VERSION_MAJOR}.${CMAKE_VERSION_MINOR}"
-  - travis_retry wget --no-check-certificate https://cmake.org/files/${CMAKE_DIR}/${CMAKE_FILE}.tar.gz
   - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
-  # do a quick md5 check to ensure that the archive we downloaded did not get compromised
-  - ${MD5SUM} ${CMAKE_FILE}.tar.gz | grep ${MD5HASH}
+  - travis_retry wget https://cmake.org/files/${CMAKE_DIR}/${CMAKE_FILE}.tar.gz
   # extract the binaries; the output here is quite lengthy,
   # so we swallow it to not clutter up the travis console
   - tar -xvf ${CMAKE_FILE}.tar.gz > /dev/null
