ci: travis: print cmake path & version

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,8 @@ before_script:
   - cd build
   # run cmake; here we assume that the project's
   # top-level CMakeLists.txt is located at '..'
+  - which cmake
+  - cmake --version
   - cmake .. -DBUILD_TESTS=true -DBUILD_EXAMPLES=true
 
 script:
