ci: travis: print env before build

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ before_script:
   - cd build
   # run cmake; here we assume that the project's
   # top-level CMakeLists.txt is located at '..'
+  - env
   - which cmake
   - cmake --version
   - cmake .. -DBUILD_TESTS=true -DBUILD_EXAMPLES=true
